fixed too high card

--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -11,9 +11,11 @@
 
 @media only screen and (max-width: 600px) {
     .card {
+        max-height: 80%;
         max-width: 80%;
         padding: 20px;
         margin-top: 25px;
+        overflow-y: auto; 
     }
 
     .selectForm {
